fix visiblity issue of dashboardbar in hamburger menu

--- a/resources/css/Dashboard.css
+++ b/resources/css/Dashboard.css
@@ -100,6 +100,10 @@
     font-size: 25px;
     margin-right: 10px;
 }
+.dashboard-bar-wrapper {
+    display: block; /* Hide by default */
+}
+
 
 /* Responsive styling */
 @media only screen and (max-width: 768px) {
@@ -113,8 +117,14 @@
         overflow: auto;
     }
 
-   
+    .dashboard-bar-wrapper {
+            display: none;
+    }
 
+    .user-info {
+        top: 10px;
+        right: 10px;
+    }
 
 }
 
