--- a/resources/css/DashboardBar.css
+++ b/resources/css/DashboardBar.css
@@ -42,25 +42,21 @@
     text-align: center;
     color: white;
 }
+.dashboard-bar-wrapper {
+    display: none; /* Hide by default */
+}
 
 @media only screen and (max-width: 768px) {
-    .sidebar {
-        width: 100%;
-        padding-left: 2rem;
-        padding-top: 7rem;
-        margin-bottom: 2rem;
-    }
+
+
 
     .user-info {
         top: 10px;
         right: 10px;
     }
 
-    .sidebar-menu-item i {
-        font-size: 20px;
+    .dashboard-bar-wrapper {
+        display: none;
     }
 
-    .sidebar-menu-link {
-        padding: 10px;
-    }
 }
