--- a/resources/css/Header.css
+++ b/resources/css/Header.css
@@ -78,7 +78,6 @@ nav.nav.container{
     display: flex;
 }
 
-.sidebar {display: none}
 /* Mobile and Tablet Menu */
 
 .nav__menu {
@@ -297,6 +296,7 @@ nav.nav.container{
 
 
 
+
 }
 
 @media screen and (max-width: 576px) {
@@ -315,6 +315,7 @@ nav.nav.container{
     }
 
 
+
     .search-bar-gallery{
         margin-top: 1rem;
         text-align: center;
@@ -322,7 +323,7 @@ nav.nav.container{
 
     .nav__menu {
         position: fixed;
-        top: 0rem;
+        top: -30rem;
         left: 0;
         width: 100%;
         height: 100%;
