--- a/resources/css/Home.css
+++ b/resources/css/Home.css
@@ -415,7 +415,6 @@ body{
 
 /* Media query for tablet and smartphone size */
 @media screen and (max-width: 768px) {
-    .sidebar {display: none}
 
     .home-content h1 {
         width: 4003px;
